# loan-portfolio-analytics

./: README.md
loan-portfolio-analytics/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
loan-portfolio-analytics/alembic/: env.py
loan-portfolio-analytics/alembic/versions/: 0001_initial.py
loan-portfolio-analytics/app/: __init__.py  main.py
loan-portfolio-analytics/app/api/: __init__.py  analytics.py
loan-portfolio-analytics/app/core/: config.py  logging.py
loan-portfolio-analytics/app/db/: session.py
loan-portfolio-analytics/app/models/: __init__.py  loan.py
loan-portfolio-analytics/app/schemas/: __init__.py  analytics.py
loan-portfolio-analytics/app/services/: __init__.py  alm.py  cecl.py  portfolio.py
loan-portfolio-analytics/scripts/: seed.py
loan-portfolio-analytics/tests/: conftest.py  test_alm.py  test_cecl.py  test_portfolio.py
